--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,14 +7,14 @@
     tools:context="jp.sasuraiusagi3.nippohub_daily.activities.SettingsActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/settingsToolBar"
+        android:id="@+id/settings_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize">
 
         <Button
-            android:id="@+id/settingsButtonToBack"
+            android:id="@+id/settings_button_to_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
@@ -23,12 +23,12 @@
     </androidx.appcompat.widget.Toolbar>
 
     <ListView
-        android:id="@+id/settingsListView"
+        android:id="@+id/settings_list_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:divider="@color/colorDivider"
         android:dividerHeight="1sp"
         android:entries="@array/settings"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/settingsToolBar" />
+        app:layout_constraintTop_toBottomOf="@id/settings_tool_bar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
