--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/signUpLabelEmail"
+                android:id="@+id/sign_up_label_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
@@ -27,26 +27,26 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/signUpFormEmail"
+                android:id="@+id/sign_up_form_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                app:layout_constraintTop_toBottomOf="@id/signUpLabelEmail" />
+                app:layout_constraintTop_toBottomOf="@id/sign_up_label_email" />
 
             <TextView
-                android:id="@+id/signUpLabelPassword"
+                android:id="@+id/sign_up_label_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:text="@string/userPassword"
-                app:layout_constraintTop_toBottomOf="@id/signUpFormEmail" />
+                app:layout_constraintTop_toBottomOf="@id/sign_up_form_email" />
 
             <EditText
-                android:id="@+id/signUpFormPassword"
+                android:id="@+id/sign_up_form_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                app:layout_constraintTop_toBottomOf="@id/signUpLabelPassword" />
+                app:layout_constraintTop_toBottomOf="@id/sign_up_label_password" />
 
             <TextView
                 android:id="@+id/signUpLabelPasswordConfirmation"
@@ -54,10 +54,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:text="@string/userPasswordConfirmation"
-                app:layout_constraintTop_toBottomOf="@id/signUpFormPassword" />
+                app:layout_constraintTop_toBottomOf="@id/sign_up_form_password" />
 
             <EditText
-                android:id="@+id/signUpFormPasswordConfirmation"
+                android:id="@+id/sign_up_form_password_confirmation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
@@ -66,26 +66,26 @@
                 app:layout_constraintTop_toBottomOf="@id/signUpLabelPasswordConfirmation" />
 
             <TextView
-                android:id="@+id/signUpLabelSignUpNotion"
+                android:id="@+id/sign_up_label_sign_up_notion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/signUpNotion"
                 android:textSize="12sp"
-                app:layout_constraintTop_toBottomOf="@id/signUpFormPasswordConfirmation" />
+                app:layout_constraintTop_toBottomOf="@id/sign_up_form_password_confirmation" />
 
             <Button
-                android:id="@+id/signUpButtonSubmit"
+                android:id="@+id/sign_up_button_submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:background="@color/colorOK"
                 android:text="@string/signUp"
                 android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@+id/signUpLabelSignUpNotion" />
+                app:layout_constraintTop_toBottomOf="@+id/sign_up_label_sign_up_notion" />
 
             <Button
-                android:id="@+id/signUpButtonToAgreements"
+                android:id="@+id/sign_up_button_to_agreements"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -95,10 +95,10 @@
                 android:textColor="@color/colorLink"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/signUpButtonSubmit" />
+                app:layout_constraintTop_toBottomOf="@+id/sign_up_button_submit" />
 
             <Button
-                android:id="@+id/signUpButtonToPrivacy"
+                android:id="@+id/sign_up_button_to_privacy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -107,7 +107,7 @@
                 android:textColor="@color/colorLink"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/signUpButtonToAgreements" />
+                app:layout_constraintTop_toBottomOf="@+id/sign_up_button_to_agreements" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
