--- a/app/src/main/res/layout/activity_new_daily_report.xml
+++ b/app/src/main/res/layout/activity_new_daily_report.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="jp.sasuraiusagi3.nippohub_daily.activities.NewDailyReportActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/new_daily_report_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -24,20 +23,18 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/new_daily_report_tool_bar">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="32dp"
-            android:paddingEnd="16dp"
+            android:orientation="vertical"
             android:paddingStart="16dp"
-            android:paddingTop="20dp">
+            android:paddingTop="20dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="32dp">
 
             <TextView
-                android:id="@+id/new_daily_report_label_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/dailyReportDate"
@@ -48,40 +45,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:calendarViewShown="false"
-                android:datePickerMode="spinner"
-                app:layout_constraintTop_toBottomOf="@+id/new_daily_report_label_date" />
+                android:datePickerMode="spinner" />
 
             <TextView
-                android:id="@+id/new_daily_report_label_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/dailyReportTitle"
-                android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@+id/new_daily_report_form_date" />
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/new_daily_report_form_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:maxLines="1"
-                app:layout_constraintTop_toBottomOf="@+id/new_daily_report_label_title" />
+                android:maxLines="1" />
 
             <TextView
-                android:id="@+id/new_daily_report_label_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/dailyReportContent"
-                android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@+id/new_daily_report_form_title" />
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/new_daily_report_form_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/new_daily_report_label_content" />
+                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/new_daily_report_button_submit"
@@ -90,11 +80,8 @@
                 android:layout_marginTop="40dp"
                 android:background="@color/colorOK"
                 android:text="@string/create"
-                android:textSize="16sp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/new_daily_report_form_content" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:textSize="16sp" />
+        </LinearLayout>
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
