--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="jp.sasuraiusagi3.nippohub_daily.activities.SettingsActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/settings_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -25,10 +24,8 @@
     <ListView
         android:id="@+id/settings_list_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:divider="@color/colorDivider"
         android:dividerHeight="1sp"
-        android:entries="@array/settings"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/settings_tool_bar" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:entries="@array/settings" />
+</LinearLayout>
