--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,114 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="32dp"
-    android:paddingEnd="16dp"
+    android:orientation="vertical"
     android:paddingStart="16dp"
     android:paddingTop="16dp"
+    android:paddingEnd="16dp"
+    android:paddingBottom="32dp"
     tools:context="jp.sasuraiusagi3.nippohub_daily.activities.SignUpActivity">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="@string/userEmail" />
+
+        <EditText
+            android:id="@+id/sign_up_form_email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress" />
 
-            <TextView
-                android:id="@+id/sign_up_label_email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:text="@string/userEmail"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@string/userPassword" />
 
-            <EditText
-                android:id="@+id/sign_up_form_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                app:layout_constraintTop_toBottomOf="@id/sign_up_label_email" />
+        <EditText
+            android:id="@+id/sign_up_form_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword" />
 
-            <TextView
-                android:id="@+id/sign_up_label_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:text="@string/userPassword"
-                app:layout_constraintTop_toBottomOf="@id/sign_up_form_email" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@string/userPasswordConfirmation" />
 
-            <EditText
-                android:id="@+id/sign_up_form_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                app:layout_constraintTop_toBottomOf="@id/sign_up_label_password" />
+        <EditText
+            android:id="@+id/sign_up_form_password_confirmation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword" />
 
-            <TextView
-                android:id="@+id/signUpLabelPasswordConfirmation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:text="@string/userPasswordConfirmation"
-                app:layout_constraintTop_toBottomOf="@id/sign_up_form_password" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/signUpNotion"
+            android:textSize="12sp" />
 
-            <EditText
-                android:id="@+id/sign_up_form_password_confirmation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/signUpLabelPasswordConfirmation" />
+        <Button
+            android:id="@+id/sign_up_button_submit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@color/colorOK"
+            android:text="@string/signUp"
+            android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/sign_up_label_sign_up_notion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/signUpNotion"
-                android:textSize="12sp"
-                app:layout_constraintTop_toBottomOf="@id/sign_up_form_password_confirmation" />
+        <Button
+            android:id="@+id/sign_up_button_to_agreements"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:background="@android:color/transparent"
+            android:text="@string/agreements"
+            android:textColor="@color/colorLink" />
 
-            <Button
-                android:id="@+id/sign_up_button_submit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:background="@color/colorOK"
-                android:text="@string/signUp"
-                android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@+id/sign_up_label_sign_up_notion" />
-
-            <Button
-                android:id="@+id/sign_up_button_to_agreements"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="20dp"
-                android:background="@android:color/transparent"
-                android:text="@string/agreements"
-                android:textColor="@color/colorLink"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_up_button_submit" />
-
-            <Button
-                android:id="@+id/sign_up_button_to_privacy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:background="@android:color/transparent"
-                android:text="@string/privacy"
-                android:textColor="@color/colorLink"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_up_button_to_agreements" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/sign_up_button_to_privacy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="8dp"
+            android:background="@android:color/transparent"
+            android:text="@string/privacy"
+            android:textColor="@color/colorLink" />
+    </LinearLayout>
+</ScrollView>
