--- a/app/src/main/res/layout/activity_daily_report_index.xml
+++ b/app/src/main/res/layout/activity_daily_report_index.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="jp.sasuraiusagi3.nippohub_daily.activities.DailyReportIndexActivity">
+    tools:context=".presentations.activities.DailyReportIndexActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
