--- a/app/src/main/res/layout/activity_edit_daily_report.xml
+++ b/app/src/main/res/layout/activity_edit_daily_report.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="jp.sasuraiusagi3.nippohub_daily.activities.EditDailyReportActivity">
+    tools:context=".presentations.activities.EditDailyReportActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
