--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="jp.sasuraiusagi3.nippohub_daily.activities.SettingsActivity">
+    tools:context=".presentations.activities.SettingsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
