--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -8,7 +8,7 @@
     android:paddingTop="40dp"
     android:paddingEnd="16dp"
     android:paddingBottom="32dp"
-    tools:context="jp.sasuraiusagi3.nippohub_daily.activities.SignInActivity">
+    tools:context=".presentations.activities.SignInActivity">
 
     <TextView
         android:layout_width="wrap_content"
