--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,7 +8,7 @@
     android:paddingTop="16dp"
     android:paddingEnd="16dp"
     android:paddingBottom="32dp"
-    tools:context="jp.sasuraiusagi3.nippohub_daily.activities.SignUpActivity">
+    tools:context=".presentations.activities.SignUpActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
