--- a/app/src/main/res/layout/fragment_daily_report_list.xml
+++ b/app/src/main/res/layout/fragment_daily_report_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jp.sasuraiusagi3.nippohub_daily.activities.DailyReportIndexActivity">
+    tools:context=".presentations.activities.DailyReportIndexActivity">
 
     <ListView
         android:id="@+id/daily_report_list_table_view"
