--- a/app/src/main/res/layout/activity_daily_report_index.xml
+++ b/app/src/main/res/layout/activity_daily_report_index.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:text="@string/newDailyReport"
+                android:text="@string/new_daily_report"
                 android:textColor="@color/colorLink" />
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
