--- a/app/src/main/res/layout/activity_daily_report_show.xml
+++ b/app/src/main/res/layout/activity_daily_report_show.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:background="@android:color/transparent"
-            android:text="@string/editDailyReport"
+            android:text="@string/edit_daily_report"
             android:textColor="@color/colorLink"
             tools:ignore="RtlHardcoded" />
 
