--- a/app/src/main/res/layout/activity_agreements.xml
+++ b/app/src/main/res/layout/activity_agreements.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:text="@string/back"
-            android:textColor="@color/colorLink" />
+            android:textColor="@color/color_link" />
     </androidx.appcompat.widget.Toolbar>
 
     <WebView
