--- a/app/src/main/res/layout/activity_daily_report_show.xml
+++ b/app/src/main/res/layout/activity_daily_report_show.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:text="@string/back"
-            android:textColor="@color/colorLink" />
+            android:textColor="@color/color_link" />
 
         <Button
             android:id="@+id/dailyReportShowButtonToEdit"
@@ -27,7 +27,7 @@
             android:layout_gravity="right"
             android:background="@android:color/transparent"
             android:text="@string/edit_daily_report"
-            android:textColor="@color/colorLink"
+            android:textColor="@color/color_link"
             tools:ignore="RtlHardcoded" />
 
     </androidx.appcompat.widget.Toolbar>
