--- a/app/src/main/res/layout/activity_post_daily_report.xml
+++ b/app/src/main/res/layout/activity_post_daily_report.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:text="@string/back"
-            android:textColor="@color/colorLink" />
+            android:textColor="@color/color_link" />
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
@@ -80,7 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:background="@color/colorOK"
+                android:background="@color/color_ok"
                 android:text="@string/update"
                 android:textSize="16sp" />
         </LinearLayout>
