--- a/app/src/main/res/layout/activity_daily_report_index.xml
+++ b/app/src/main/res/layout/activity_daily_report_index.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:text="@string/setting"
-                android:textColor="@color/colorLink" />
+                android:textColor="@color/color_link" />
 
             <Button
                 android:id="@+id/daily_report_index_button_to_new"
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:text="@string/new_daily_report"
-                android:textColor="@color/colorLink" />
+                android:textColor="@color/color_link" />
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
